[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Yuliya Dzhumanazarova <yaschick451@gmail.com>"]
license = "free"
readme = "README.md"
packages = [
  {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
