[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
authors = ["Yuliya Dzhumanazarova <yaschick451@gmail.com>"]
license = "Free for non-commercial use"
readme = "README.md"
repository = "https://github.com/yudzhum/python-project-49"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
packages = [
  {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
